# k1usnsst

./: .gitignore  LICENSE  README.md  SST.adi  SST.db  dialog.ui  k1usnsst.py  k1usnsst.spec  linux.spec  main.ui  publish.sh  pyproject.toml  rebuild.sh  requirements.txt  settings.ui  tlfmarkers  windows.spec
.github/: FUNDING.yml
install_icon/: install.sh  k6gte-k1usnsst.desktop  uninstall.sh
k1usnsst/: __main__.py  k1usnsst.py
k1usnsst/data/: cwmacros_sst.txt  main.ui  settings.ui
k1usnsst/lib/: settings.py
