[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "k1usnsst" 
version = "23.1.27"
description = "K1USN SST Logger"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Michael Bridak", email="michael.bridak@gmail.com" },
]
dependencies = [
    "PyQt5",
    "requests",
    "xmltodict",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Communications :: Ham Radio",
]

[project.urls]
"Homepage" = "https://github.com/mbridak/k1usnsst"
"Bug Tracker" = "https://github.com/mbridak/k1usnsst/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"k1usnsst.data" = ["*.json", "*.txt", "*.SCP", "*.ui", "*.ttf", "*.desktop", "*.png",]
"k1usnsst.icon" = ["*.png",]

[project.scripts]
k1usnsst = "k1usnsst.__main__:run"